added authorize endpoint and handlers
